<resources>
    <string name="app_name">FactCheck</string>
    <string name="new_account">New Account</string>
    <string name="fact_check">Fact Check</string>
    <string name="nothing_it_seems_like">Nothing It Seems Like</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pages">Pages</string>
    <string name="action_pages">Action Pages</string>
    <string name="email_name">Email/Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_create_new_accout">or Create New Accout</string>
    <string name="email_name1">Email/Name</string>
    <string name="password1">Password</string>
    <string name="register">Register</string>
    <string name="the_title_of_the_post">The Title Of The Post</string>
    <string name="published_on_18_08_2019">Published On 18-08-2019</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="_91">+91</string>
    <string name="enter_the_otp_recieved">Enter The OTP Recieved</string>
    <string name="didn_t_get_otp_resend">Didn\'t Get OTP?<b>Resend</b></string>
    <string name="with_phone_number">With Phone Number</string>


    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>



</resources>