<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background_account">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/accountImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/person"
            android:layout_margin="30dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp">
            <EditText
                android:id="@+id/et_userLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/email_name"
                android:drawableLeft="@drawable/ic_user"
                android:inputType="textEmailAddress"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:boxCornerRadiusTopStart="6dp"
                    app:boxCornerRadiusTopEnd="6dp"
                    app:boxCornerRadiusBottomEnd="6dp"
                    app:boxCornerRadiusBottomStart="6dp">

                    <EditText
                        android:id="@+id/et_passwordLogin"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/password"
                        android:drawableLeft="@drawable/ic_password"
                        android:inputType="numberPassword" />



                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ivShowHidePass"
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_password_visible" />



            </LinearLayout>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/txt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_create_new_accout"
            android:textAlignment="center"
            />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:buttonSize="standard"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/phoneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_phone_number"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:drawableRight="@drawable/ic_baseline_phone_24"/>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>