<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MobileActivity"
    android:orientation="vertical"
    android:background="@drawable/background_mobile">

    <ImageView
        android:id="@+id/imageIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_mobile"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_mobile_number"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/phoneLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/phonEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="+91 0123456789"
            android:layout_margin="10dp"
            android:inputType="phone"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/phoneContinueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center"/>


    </LinearLayout>


    <ImageView
        android:id="@+id/otpimageIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_mobile_otp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_otp_recieved"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="8dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/codeLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/codeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter The OTP"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:inputType="number"/>
        <TextView
            android:id="@+id/resendCodeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_get_otp_resend"
            android:textAlignment="center"
            android:layout_gravity="center"
            style="@style/TextAppearance.MaterialComponents.Caption"/>
        <Button
            android:id="@+id/codesubmitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center"/>


    </LinearLayout>



</LinearLayout>